--- a/index.html
+++ b/index.html
@@ -1,43 +1,27 @@
+---
+---
+
 <!DOCTYPE html>
 <html class="file" lang="en-US" dir="ltr">
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/icon.svg">
+    <link href="css/navbar.css" rel="stylesheet" type="text/css">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/footer.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Audiowide|Comfortaa&display=swap" rel="stylesheet">
+    <title>{{ site.title }}</title>
+  </head>
 
-<head>
-  <link rel="shortcut icon" href="images/icon.svg">
-  <link href="main.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Audiowide|Comfortaa&display=swap" rel="stylesheet">
-  <meta charset="utf-8">
-  <title></title>
-</head>
+  <body>
+    {% include navbar.html %}
 
-<body>
-  <nav>
-    <ul class="navigation">
-      <li class="nav-title">
-        <a class="nav-title-a" href="./index.html">
-          <img class="icon" src="images/icon.svg" alt="">
-          <span>Super Laser Cat</span>
-        </a>
-      </li>
-      <li><a href="./issues.html">Bug Reports</a></li>
-      <li><a href="./releases.html">Releases</a></li>
-      <li><a href="./devblog.html">Dev Blog</a></li>
-      <li><a href="./news.html">News</a></li>
-    </ul>
-  </nav>
-</body>
+    <div class="content">
+      <h1 class="title">Super Laser Cat</h1>
+    </div>
 
-<body class="main">
-  <div class="content">
-    <h1 class="title">Super Laser Cat</h1>
-  </div>
-</body>
-
-<body>
-  <footer>
-    <span>© 2019 Ian Blackledge</span>
-  </footer>
-</body>
+    {% include footer.html %}
+  </body>
 
 </html>
